<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="name_hint">Name</string>
    <string name="username_hint" translatable="false">Username</string>
    <string name="hint_second_password">Confirm password</string>
    <string name="email_hint">E-mail</string>
    <string name="address_hint">Address</string>
    <string name="phone_hint">Phone Number</string>
    <string name="bio_hint">Biography (Optional)</string>
    <string name="crop_image">Crop Image</string>
    <string name="password_hint">Password</string>
    <string name="alert_dialog_back_title">Watch out!</string>
    <string name="biography">Biography</string>
    <string name="error_writing_file">Writing file operation failed. Retry</string>
    <string name="accept">OK</string>
    <string name="alert_dialog_back_message">There are modifications not saved that will be lost. Continue?</string>
    <string name="alert_dialog_image_gallery">Gallery</string>
    <string name="alert_dialog_image_camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="alert_dialog_image_title">Choose one option</string>

    <string name="error_name">Invalid Username</string>
    <string name="error_number">Invalid Number</string>
    <string name="error_address">Invalid Address</string>
    <string name="error_email">Invalid E-mail</string>
    <string name="error_bio">Invalid Bio</string>
    <string name="error_equals">Passwords must be equals</string>
    <string name="error_password">Invalid Password: At least 8 chars, one upper and a number </string>

    <string name="error_dish_name_missing">Dish Name Missing</string>
    <string name="error_dish_name_duplicate">Dish Name Already Exists</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="timetable">Timetable</string>

    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>

    <string name="Closed">Closed</string>

    <string name="Accept">Accept</string>
    <string name="Decline">Decline</string>

    <string-array name="foodcategory_array">
        <item>American</item>
        <item>Brazilian</item>
        <item>Chinese</item>
        <item>Korean</item>
        <item>Crepes</item>
        <item>Desserts</item>
        <item>Fried</item>
        <item>Japanese</item>
        <item>Gluten Free</item>
        <item>Greek</item>
        <item>Hamburger</item>
        <item>Indian</item>
        <item>Kebab</item>
        <item>Middle East</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Noodle</item>
        <item>Pasta and Rice</item>
        <item>Wraps</item>
        <item>Pizza</item>
        <item>Fry Shop</item>
        <item>Steakhouse</item>
        <item>Thai</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Soups</item>
    </string-array>
    <string name="login_success">Login completed</string>
    <string name="login_failure">Login failed</string>
    <string name="auth_success">Authentication completed</string>
    <string name="auth_failure">Authentication failed</string>
    <string name="register">Register</string>
    <string name="login" translatable="false">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="empty_email">E-mail field is empty</string>
    <string name="empty_password">Password field is empty</string>
    <string name="empty_username">Username field is empty</string>
    <string name="logout">Logout</string>
    <string name="error_order">Cannot satisfy your request</string>
    <string name="save">Your data has been saved</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>
    <string name="doing">Doing</string>
    <string name="rejected">Rejected</string>
    <string name="delivered">Delivered</string>

    <string name="address_not_selected">Select a delivery address</string>
    <string name="click_address">Click to insert address</string>

    <string name="history">Stats</string>

    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="mayL">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="your_orders">Your Orders</string>

    <string name="all_orders">All orders</string>
    <string name="enter_orders_history">Enter the history</string>
    <string name="total_distance">Total distance</string>
    <string name="working_hours">Frequent working Hours</string>
    <string name="orders_number">Total number of orders</string>
    <string name="kilometers" translatable="false">km</string>
    <string name="currency" translatable="false">€</string>
    <string name="total_spent">Total spent</string>
    <string name="most_ordered_dishes">Most ordered dishes</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="total_income">Total income</string>
    <string name="all_review">All reviews</string>
    <string name="enter_review">Enter the reviews</string>

    <string name="text_orders">Orders</string>
    <string name="text_accepted">Accepted</string>
    <string name="text_rejected">Rejected</string>
    <string name="text_delivered">Delivered</string>

    <string name="food_quality">Food Quality:</string>
    <string name="restaurant_service">Restaurant Service:</string>
    <string name="delivery_time_hint">Delivery Time:</string>
    <string name="no_reviews">You have no reviews yet</string>

    <string name="db_error_message">DB error connection!</string>

    <string name="no_revies_posted">No Reviews Posted</string>
    <string name="no_reviews_received">No Reviews Received</string>
</resources>